--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^4.0.1",
+    "@nuxt/fonts": "0.11.4",
+    "@pinia/nuxt": "0.11.2",
+    "nuxt": "4.0.3",
+    "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "typescript": "^5.9.2",
+    "vue-tsc": "^3.0.5"
   }
 }
