--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "daisyui": "^5.0.50",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2",
     "vue-tsc": "^3.0.5"
   }
