--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "0.11.2",
     "gsap": "^3.13.0",
     "nuxt": "4.0.3",
+    "ogl": "^1.0.11",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
