--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/fonts": "0.11.4",
     "@pinia/nuxt": "0.11.2",
+    "@vueuse/nuxt": "13.6.0",
     "gsap": "^3.13.0",
     "nuxt": "4.0.3",
     "ogl": "^1.0.11",
