--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/fonts": "0.11.4",
+    "@nuxtjs/supabase": "1.6.0",
     "@pinia/nuxt": "0.11.2",
     "@vueuse/nuxt": "13.6.0",
     "gsap": "^3.13.0",
