--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@nuxt/fonts": "0.11.4",
     "@nuxtjs/supabase": "1.6.0",
     "@pinia/nuxt": "0.11.2",
+    "@vee-validate/nuxt": "^4.15.1",
+    "@vee-validate/yup": "^4.15.1",
     "@vueuse/nuxt": "13.6.0",
     "gsap": "^3.13.0",
     "nuxt": "4.0.3",
     "ogl": "^1.0.11",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.11",
