--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.13.0",
     "nuxt": "4.0.3",
     "ogl": "^1.0.11",
+    "pdfjs-dist": "^5.4.149",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
