--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.9",
     "yup": "^1.7.0"
   },
   "devDependencies": {
