Added sorting button WIP

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@nuxt/fonts": "0.11.4",
     "@nuxtjs/supabase": "1.6.0",
     "@pinia/nuxt": "0.11.2",
