--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@google-analytics/data": "^5.2.1",
     "@headlessui/vue": "^1.7.23",
     "@nuxt/fonts": "0.11.4",
     "@nuxtjs/supabase": "1.6.0",
@@ -21,7 +22,7 @@
     "gsap": "^3.13.0",
     "nuxt": "4.0.3",
     "ogl": "^1.0.11",
-    "pdfjs-dist": "^5.4.149",
+    "pdfjs-dist": "5.4.149",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
