--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "Flipture",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,11 +13,13 @@
     "@google-analytics/data": "^5.2.1",
     "@headlessui/vue": "^1.7.23",
     "@nuxt/fonts": "0.11.4",
-    "@nuxtjs/supabase": "1.6.0",
+    "@nuxtjs/supabase": "2.0.3",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.48.1",
     "@pinia/nuxt": "0.11.2",
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/yup": "^4.15.1",
-    "@vueuse/nuxt": "13.6.0",
+    "@vueuse/nuxt": "14.1.0",
     "dayjs": "^1.11.18",
     "gsap": "^3.13.0",
     "nuxt": "4.0.3",
