--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,10 @@
-[build]
-  command = "yarn build"
-  publish = ".output/public"
-
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/server"
   status = 200
-  force = false
 
-[functions]
-  directory = ".output/server"
-  node_bundler = "esbuild"
-  external_node_modules = ["@google-analytics/data"]
-
-[build.environment]
-  NODE_VERSION = "20"
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
