--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,2 @@
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/server"
-  status = 200
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
+# Let Nuxt handle the deployment automatically
+# No configuration needed - Nuxt's netlify preset handles everything
