--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@google-analytics/data": "^5.2.1",
     "@headlessui/vue": "^1.7.23",
+    "@netlify/nuxt": "^0.2.15",
     "@nuxt/fonts": "0.11.4",
     "@nuxtjs/supabase": "2.0.3",
+    "@pinia/nuxt": "0.11.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.48.1",
-    "@pinia/nuxt": "0.11.2",
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/yup": "^4.15.1",
     "@vueuse/nuxt": "14.1.0",
