--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/yup": "^4.15.1",
     "@vueuse/nuxt": "14.1.0",
+    "chart.js": "^4.5.1",
     "dayjs": "^1.11.18",
     "gsap": "^3.13.0",
     "nuxt": "4.0.3",
@@ -27,6 +28,7 @@
     "pdfjs-dist": "5.4.149",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.9",
     "yup": "^1.7.0"
