--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/fonts": "0.11.4",
     "@nuxtjs/supabase": "2.0.3",
     "@pinia/nuxt": "0.11.2",
+    "@stripe/stripe-js": "^8.6.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.48.1",
     "@vee-validate/nuxt": "^4.15.1",
@@ -27,6 +28,7 @@
     "ogl": "^1.0.11",
     "pdfjs-dist": "5.4.149",
     "pinia": "^3.0.3",
+    "stripe": "^20.1.0",
     "vue": "^3.5.18",
     "vue-chartjs": "^5.3.3",
     "vue-router": "^4.5.1",
