--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
+    "sass-embedded": "^1.97.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2",
     "vue-tsc": "^3.0.5"
