--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.5.1",
     "dayjs": "^1.11.18",
     "gsap": "^3.13.0",
+    "motion-v": "^1.10.2",
     "nuxt": "4.0.3",
     "ogl": "^1.0.11",
     "pdfjs-dist": "5.4.149",
