--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-analytics/data": "^5.2.1",
     "@headlessui/vue": "^1.7.23",
     "@nuxt/fonts": "0.11.4",
+    "@nuxt/icon": "^2.2.1",
     "@nuxtjs/supabase": "2.0.3",
     "@pinia/nuxt": "0.11.2",
     "@stripe/stripe-js": "^8.6.0",
@@ -24,6 +25,7 @@
     "chart.js": "^4.5.1",
     "dayjs": "^1.11.18",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.17",
     "motion-v": "^1.10.2",
     "nuxt": "4.0.3",
     "ogl": "^1.0.11",
