--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ogl": "^1.0.11",
     "pdfjs-dist": "5.4.149",
     "pinia": "^3.0.3",
+    "resend": "^6.9.1",
     "stripe": "^20.1.0",
     "vue": "^3.5.18",
     "vue-chartjs": "^5.3.3",
